test/parse-errors/when-without-else.nz
f void()
	when
		true
			pass
